<resources>
    <string name="app_name">Attendo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ISboto">Iniciar Sessió</string>
    <string name="CCboto">Crear compte</string>
    <string name="returnText">Retorna a la pàg anterior</string>
    <string name="alumne">Alumne</string>
    <string name="adrc">Nom o Adreça electrònica:</string>
    <string name="value">Value</string>
    <string name="rpc">Recuperar contrasenya</string>
    <string name="ccs">Canviar contrasenya</string>
    <string name="cr">Cancel·lar</string>
    <string name="csn">Contrasenya</string>
    <string name="nvc">Nova contrasenya</string>
    <string name="hoc">Has oblidat la contrasenya?</string>
    <string name="spu">Selecciona el teu perfil d’usuari:</string>
    <string name="benvingut">Benvingut</string>
    <string name="trobar">Trobar</string>
    <string name="tornar">Tornar</string>
    <string name="pag1">1</string>
    <string name="pag2">2</string>
    <string name="pag4">4</string>
    <string name="pag...">…</string>
    <string name="safata">Safata dentrada</string>
    <string name="seg">Seguent</string>
    <string name="navigation_drawer_open">Obrir menú</string>
    <string name="navigation_drawer_close">Tancar menú</string>
    <string name="mssg">Missatges</string>
    <string name="asis">Assistències</string>
    <string name="pagina_actual">Pàgina 1 de 4</string>
    <string name="inici">Inici</string>
    <string name="emmsg">Enviar Missatge</string>
    <string name="destinataris">Destinataris</string>
    <string name="assumpte">Assumpte</string>
    <string name="cos">Cos</string>
    <string name="adjunts">Adjunts</string>
    <string name="ajuntar_fitxers">Ajuntar Fitxers</string>
    <string name="cancelar">Cancel.lar</string>
    <string name="enviar">Enviar</string>
    <string name="apa"> Assistències per assignatures</string>
    <string name="m06"> M06 - Accés a dades</string>
    <string name="m07"> M07 - Desenvolupament d’interfícies</string>
    <string name="m08"> M08 - Programació multimèdia i dispositius mòbils</string>
    <string name="m09"> M09 - Programació de serveis i processos</string>
    <string name="tut"> Tutoria </string>
    <string name="m07D"> Descripció</string>
    <string name="uf1"> UF1</string>
    <string name="uf2"> UF2</string>
    <string name="uf3"> UF3</string>
    <string name="uf4"> UF4</string>
    <string name="titol2"> 17/12/2024</string>
    <string name="titol3"> 18/12/2024</string>
    <string name="titol4"> 19/12/2024</string>
    <string name="titol"> 16/12/2024</string>
    <string name="assgD"> Assistències diaries</string>
    <string name="horarisTitol"> Horaris</string>
</resources>