<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".SafataEntrada">

    <!-- Contingut principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Barra superior (Toolbar) -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#779FE5"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/safata"
            app:titleTextColor="@color/white" />

        <!-- Text de benvinguda -->
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/benvingut"
            android:textStyle="italic|bold"
            android:textColor="#779FE5"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="TextContrastCheck" />

        <!-- Barra de cerca -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/trobarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/trobar_background"
            app:iconifiedByDefault="false"
            app:queryHint="@string/trobar"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <!-- RecyclerView per mostrar notificacions -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/trobarView"
            app:layout_constraintBottom_toTopOf="@id/paginationLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Contenidor de Paginació -->
        <LinearLayout
            android:id="@+id/paginationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/menuBottomFrag">

            <!-- Botó per anar a la pàgina anterior -->
            <TextView
                android:id="@+id/tornarBoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tornar"
                android:textColor="#a4abb0"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/page1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/page2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag..." />

            <TextView
                android:id="@+id/page4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag4" />

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/seg"
                android:textColor="#a4abb0"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/menuBottomFrag"
            android:name="com.example.prjassistencies.fragSE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout="@layout/fragment_frag_s_e" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>
