<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SafataMissatges">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#779FE5"
            android:textStyle="italic|bold"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/mssg"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/inici"
            android:textColor="#779FE5"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toStartOf="@id/buttonMessage"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/buttonMessage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/wmessageicon"
            app:layout_constraintBottom_toBottomOf="@id/welcomeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/welcomeText"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/trobarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/trobar_background"
            app:iconifiedByDefault="false"
            app:queryHint="@string/trobar"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/welcomeText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/trobarView"
            app:layout_constraintBottom_toTopOf="@id/paginationLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/paginationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/menuBottomFrag">

            <!-- Botó per anar a la pàgina anterior -->
            <TextView
                android:id="@+id/tornarBoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tornar"
                android:textColor="#a4abb0"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/page1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/page2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag..." />

            <TextView
                android:id="@+id/page4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/pag4" />

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/seg"
                android:textColor="#a4abb0"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/menuBottomFrag"
            android:name="com.example.prjassistencies.fragSE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout="@layout/fragment_frag_s_e" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>