<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WMissatges">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#779FE5"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/mssg"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/emmsg"
            android:textColor="#779FE5"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#DFF2FF"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destinataris"
                        android:textColor="#333"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/value"
                        android:padding="8dp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#DFF2FF"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assumpte"
                        android:textColor="#333"
                        android:layout_marginBottom="5dp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/value"
                        android:padding="8dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#DFF2FF"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cos"
                        android:layout_marginBottom="5dp"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:hint="@string/value"
                        android:background="@drawable/rounded_edittext_background"
                        android:padding="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#DFF2FF"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adjunts"
                        android:layout_marginBottom="5dp"
                        android:textColor="#333"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/ajuntar_fitxers"
                        android:padding="8dp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/menuBottomFrag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:backgroundTint="#A4A4A4"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enviar"
                android:backgroundTint="#779FE5"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <!-- Bottom Fragment -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/menuBottomFrag"
            android:name="com.example.prjassistencies.fragSE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout="@layout/fragment_frag_s_e" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
