<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecuperarContrasenya">

    <!-- Fragment de retorn -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/trobarBasi"
        android:name="com.example.prjassistencies.Topfrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_topfrag" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/logoApp"
            android:name="com.example.prjassistencies.logoAppPrj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:layout="@layout/fragment_logo_app_prj" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/rpc"
        android:textColor="#779FE5"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:layout_marginTop="20dp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#DFF2FF"
        android:padding="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <!-- Camp: Nom o Adreça electrònica -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adrc"
            android:textColor="#333"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/value"
            android:padding="8dp"
            tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize"/>

        <!-- Botons en un layout horitzontal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancelarButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/cr"
                android:backgroundTint="#FFFFFF"
                android:textColor="#000000"
                android:layout_marginEnd="8dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/canviarButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#779FE5"
                android:text="@string/ccs"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>